* Estatistica-lista-descritiva-exercicios.tex: Incluída versão na lista de Descritiva. PDF atualizado.

--- a/Estatistica-lista-descritiva-exercicios.tex
+++ b/Estatistica-lista-descritiva-exercicios.tex
@@ -78,10 +78,11 @@ Estatística: Análise Descritiva
 
 \par\bigskip}
 {Prof: Felipe Figueiredo\par}
-{\url{http://sites.google.com/site/proffelipefigueiredo}}
-
-\vspace{1cm}
+{\url{http://sites.google.com/site/proffelipefigueiredo}\par}
 }
+
+Versão: \verb|20141124|
+
 %%%%%%%%%%%%%%%%%%%%%%%%
 
 
