--- a/Estatistica-lista-prob_basica.tex
+++ b/Estatistica-lista-prob_basica.tex
@@ -80,10 +80,11 @@ Estatística: Lista 2
 % {Centro Universitário Anhanguera de Niterói -- UNIAN\par} 
 % {Curso: Engenharia\par}
 {Prof: Felipe Figueiredo\par}
-{\url{http://sites.google.com/site/proffelipefigueiredo}}
-
-\vspace{1cm}
+{\url{http://sites.google.com/site/proffelipefigueiredo}\par}
 }
+
+Versão: \verb|20141124|
+
 %%%%%%%%%%%%%%%%%%%%%%%%
 
 
