* Estatistica-lista-descritiva-exercicios.tex: Corrigido título da lista.

--- a/Estatistica-lista-descritiva-exercicios.tex
+++ b/Estatistica-lista-descritiva-exercicios.tex
@@ -74,7 +74,7 @@
 \parbox[c]{.825\textwidth}{\raggedright%
   \sffamily {\LARGE
 
-Estatística: Análise Descritiva
+Estatística: Lista de Análise Descritiva
 
 \par\bigskip}
 {Prof: Felipe Figueiredo\par}
