* Estatistica-lista-descritiva-gabarito.tex: Corrigido título do gabarito.

--- a/Estatistica-lista-descritiva-gabarito.tex
+++ b/Estatistica-lista-descritiva-gabarito.tex
@@ -73,7 +73,7 @@
 \parbox[c]{.825\textwidth}{\raggedright%
   \sffamily {\LARGE
 
-Estatística: Gabarito 1
+Estatística: Gabarito de Análise Descritiva
 
 \par\bigskip}
 % {Centro Universitário Anhanguera de Niterói -- UNIAN\par} 
