* Estatistica-lista-prob_basica.tex: Corrigido título da lista.

--- a/Estatistica-lista-prob_basica.tex
+++ b/Estatistica-lista-prob_basica.tex
@@ -74,7 +74,7 @@
 \parbox[c]{.825\textwidth}{\raggedright%
   \sffamily {\LARGE
 
-Estatística: Lista 2
+Estatística: Lista de Probabilidades Básicas
 
 \par\bigskip}
 % {Centro Universitário Anhanguera de Niterói -- UNIAN\par} 
