lembrete da classificação de dados

--- a/Listas/Estatistica-lista-intro.tex
+++ b/Listas/Estatistica-lista-intro.tex
@@ -100,4 +100,18 @@ Consulte o livro texto da disciplina (PLT) nas seções marcadas abaixo:
 \item Seçao {\bf 1.2}: questões 1 a 24. (Obs: use a classificação dos tipos de dados vista em sala, e não a do livro texto).
 \end{enumerate}
 
+Segue um breve lembrete:
+
+{\em Dados Qualitativos} (ou categóricos)
+\begin{itemize}
+\item nominais (categorias sem ordem)
+\item ordinais (possuem ordem intrínseca)
+\end{itemize}
+
+{\em Dados Quantitativos} (ou numéricos)
+\begin{itemize}
+\item Discretos (contagem)
+\item Contínuos (medição)
+\end{itemize}
+
 \end{document}
