--- a/Notas_de_aula/Estatistica-revisao2_alturas+sapatos.Rmd
+++ b/Notas_de_aula/Estatistica-revisao2_alturas+sapatos.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Revisão 2: Sapatadas nas alturas"
+title: 'Revisão 2: Sapatadas nas alturas'
 author: "Felipe Figueiredo"
 date: "March 30, 2016"
 output: html_document
