--- a/Notas_de_aula/Estatistica-Correlacao.tex
+++ b/Notas_de_aula/Estatistica-Correlacao.tex
@@ -204,8 +204,7 @@
   (Fonte: Triola)
 \end{frame}
 
-%\subsection[Covariância]{Covariância entre duas amostras}
-\subsection{Covariância entre duas amostras}
+\subsection[Covariância]{Covariância entre duas amostras}
 
 \begin{frame}{Variância}
   \begin{itemize}
