formula mais simples
Ao invés da fórmula do livro, escolhi esta alternativa (menos estável
numericamente, mas menos "assustadora")

--- a/Notas_de_aula/Estatistica-Correlacao.tex
+++ b/Notas_de_aula/Estatistica-Correlacao.tex
@@ -268,12 +268,14 @@
   \item O coeficiente de correlação de Pearson é a covariância
     normalizada
   \item Pode ser calculado para populações ($\rho$) ou amostras ($r$)
-  \item População
+  \item Amostra:
     \begin{displaymath}
-      \rho = \frac{\text{Cov(X,Y)}}{\sigma_X \times \sigma_Y}
+      r = \frac{\sum xy - n \bar{x}\bar{y}}{(n-1)s_x s_y}
+%      r = \frac{n\sum xy -\left(\sum x \right)\left(\sum y \right)}{}
+%\frac{\text{Cov(X,Y)}}{\sigma_X \times \sigma_Y}
     \end{displaymath}
   \item Utilizando uma fórmula semelhante, encontramos o coeficiente
-    $r$ para uma amostra
+    $\rho$ para uma população
   \end{itemize}
 \end{frame}
 
