--- a/Notas_de_aula/Estatistica-Correlacao.tex
+++ b/Notas_de_aula/Estatistica-Correlacao.tex
@@ -292,15 +292,15 @@
   \end{block}
 \end{frame}
 
-\begin{frame}{}
-  \begin{itemize}
-  \item Se tivéssemos os dados de toda a população, poderíamos
-    calcular o \alert<1>{parâmetro} $\rho$
-  \item Na prática, só podemos calcular a \alert<2>{estatística} $r$ da amostra
-  \item Utilizamos $r$ como estimador para $\rho$, e testamos a
-    significância estatística da forma usual
-  \end{itemize}
-\end{frame}
+% \begin{frame}{}
+%   \begin{itemize}
+%   \item Se tivéssemos os dados de toda a população, poderíamos
+%     calcular o \alert<1>{parâmetro} $\rho$
+%   \item Na prática, só podemos calcular a \alert<2>{estatística} $r$ da amostra
+%   \item Utilizamos $r$ como estimador para $\rho$, e testamos a
+%     significância estatística da forma usual
+%   \end{itemize}
+% \end{frame}
 
 \begin{frame}{Exemplo}
  \begin{example}
