--- a/Notas_de_aula/Estatistica-Correlacao.tex
+++ b/Notas_de_aula/Estatistica-Correlacao.tex
@@ -346,43 +346,43 @@
   Obs: na verdade, $r=0.77$.
 \end{frame}
 
-\begin{frame}{Exemplo}
-  \begin{itemize}
-  \item O tamanho da amostra foi $n=13$
-  \item Consultamos o valor crítico de $r$ na tabela a seguir
-  \item Testamos a $H_0$ que não há relação entre as variáveis na
-    população ($H_0: \rho = 0$).
-  \end{itemize}
-\end{frame}
+% \begin{frame}{Exemplo}
+%   \begin{itemize}
+%   \item O tamanho da amostra foi $n=13$
+%   \item Consultamos o valor crítico de $r$ na tabela a seguir
+%   \item Testamos a $H_0$ que não há relação entre as variáveis na
+%     população ($H_0: \rho = 0$).
+%   \end{itemize}
+% \end{frame}
 
-\begin{frame}{Exemplo}
-  \begin{center}
-      \includegraphics[height=0.8\textheight]{Assoc/test}
-  \end{center}
-\end{frame}
+% \begin{frame}{Exemplo}
+%   \begin{center}
+%       \includegraphics[height=0.8\textheight]{Assoc/test}
+%   \end{center}
+% \end{frame}
 
-\begin{frame}{Exemplo}
-  \begin{itemize}
-  \item O valor crítico da tabela para uma amostra de tamanho 13 é
-    $r_c = 0.553$
-  \item A correlação calculada para esta amostra foi $r=0.77$
-  \item Como a correlação é maior que o valor crítico, a relação é
-    estatisticamente significativa
-  \item Conclusão: há evidências para rejeitar a $H_0$ que não há
-    relação entre as variáveis.
-  \end{itemize}
-\end{frame}
+% \begin{frame}{Exemplo}
+%   \begin{itemize}
+%   \item O valor crítico da tabela para uma amostra de tamanho 13 é
+%     $r_c = 0.553$
+%   \item A correlação calculada para esta amostra foi $r=0.77$
+%   \item Como a correlação é maior que o valor crítico, a relação é
+%     estatisticamente significativa
+%   \item Conclusão: há evidências para rejeitar a $H_0$ que não há
+%     relação entre as variáveis.
+%   \end{itemize}
+% \end{frame}
 
-\begin{frame}{Exemplo}
-  \begin{itemize}
-  \item Pode-se também calcular o p-valor para o coeficiente de
-    correlação $r$.
-  \item Para este exemplo, teríamos $p=0.0021$.
-  \item Interpretação: se não houver relação entre as variáveis
-    ($H_0$), existe apenas 0.21\% de chance de observamos uma
-    correlação tão forte com um estudo deste tamanho
-  \end{itemize}
-\end{frame}
+% \begin{frame}{Exemplo}
+%   \begin{itemize}
+%   \item Pode-se também calcular o p-valor para o coeficiente de
+%     correlação $r$.
+%   \item Para este exemplo, teríamos $p=0.0021$.
+%   \item Interpretação: se não houver relação entre as variáveis
+%     ($H_0$), existe apenas 0.21\% de chance de observamos uma
+%     correlação tão forte com um estudo deste tamanho
+%   \end{itemize}
+% \end{frame}
 
 \begin{frame}{Exemplo}
   Por que as duas variáveis são tão correlacionadas? Considere 4
