retirada menção a regressão

--- a/Notas_de_aula/Estatistica-Correlacao.tex
+++ b/Notas_de_aula/Estatistica-Correlacao.tex
@@ -428,7 +428,7 @@
     da variância na sensibilidade à insulina
   \item Isto deixa 41\% da variância que pode ser explicada por outros
     fatores ou erros de medição
-  \item E este valor ($r^2$) também é utilizado na Regressão!
+  % \item E este valor ($r^2$) também é utilizado na Regressão!
   \end{itemize}
 \end{frame}
 
