diagrama de dispersao

--- a/Notas_de_aula/Estatistica-Correlacao.tex
+++ b/Notas_de_aula/Estatistica-Correlacao.tex
@@ -180,7 +180,7 @@
   \begin{itemize}
   \item Quando uma associação é forte, podemos identificá-la
     subjetivamente
-  \item Para isto, analisamos o gráfico de dispersão dos pares (x,y)
+  \item Para isto, analisamos o diagrama de dispersão dos pares (x,y)
   \item Um gráfico deste tipo é feito simplesmente plotando os pontos
     no plano cartesiano
   \end{itemize}
