exemplo de aplicacao (netflix)

--- a/Notas_de_aula/Estatistica-Regressao.tex
+++ b/Notas_de_aula/Estatistica-Regressao.tex
@@ -175,6 +175,48 @@
   \end{itemize}
 \end{frame}
 
+\begin{frame}{Enquanto isso, no mundo real...}
+  \centering
+  \includegraphics[height=.8\textheight]{Assoc/netflix}
+
+  Fonte: \url{www.administradores.com.br}
+\end{frame}
+
+\begin{frame}{Enquanto isso, no mundo real...}
+  \begin{block}{Da matéria}
+    A Netflix analisou seu mercado inteiro para entender qual série iria repercutir melhor. E não foram apenas pesquisas de comportamento. (\ldots)
+
+\bigskip
+A organização analisou cada clique, pausa, tempo de retenção nas séries e filmes, aceleração ou desaceleração de frames, entre mil outros fatores, até chegar a uma conclusão. 
+  \end{block}
+
+  \vfill
+  Fonte: \url{www.administradores.com.br}
+\end{frame}
+
+\begin{frame}{Enquanto isso, no mundo real...}
+  \begin{block}{Da matéria}
+[Eles entenderam] que seu público gostava de séries políticas (\ldots)
+
+\bigskip A empresa também começou a olhar para uma antiga série britânica que fez muito sucesso e estava a venda, com atores e diretores populares dentre seu público alvo.
+  \end{block}
+
+  \vfill
+  Fonte: \url{www.administradores.com.br}
+\end{frame}
+
+\begin{frame}{Enquanto isso, no mundo real...}
+  \begin{block}{Da matéria}
+Se eles tivessem parado de analisar logo no primeiro fator, muito provavelmente a análise teria sido comprometida.  (\ldots)
+
+\bigskip
+Afinal, quantas foram as vezes que não clicamos em uma série, mas não ficamos nela por mais de 5 minutos?
+  \end{block}
+
+  \vfill
+  Fonte: \url{www.administradores.com.br}
+\end{frame}
+
 \begin{frame}{Reta de regressão}
   \begin{definition}
     Uma \alert{reta de regressão} (também chamada de reta de melhor
