Exercício (exemplo do livro)

--- a/Notas_de_aula/Estatistica-Regressao.tex
+++ b/Notas_de_aula/Estatistica-Regressao.tex
@@ -269,6 +269,62 @@ Afinal, quantas foram as vezes que não clicamos em uma série, mas não ficamos
   \end{itemize}
 \end{frame}
 
+\begin{frame}{Exercício}
+  \begin{block}{Exercício}
+    Dados de gastos com propaganda (x) e vendas (x), ambos em \$1000 de uma empresa.
+
+\bigskip
+
+\centering\begin{tabular}{|c|c|c|c|c|c|c|c|c|}
+\hline
+x & 2.4 &  1.6& 2.0 & 2.6 & 1.4& 1.6& 2.0& 2.2\\
+\hline
+y & 225& 184& 220& 240& 180& 184& 186& 215\\
+\hline
+    \end{tabular}
+
+\bigskip
+
+Qual é a {\em previsão} de retorno em vendas, para os seguintes gastos com propagandas?
+
+\begin{enumerate}
+\item 1.5
+\item 1.8
+\item 2.5
+\end{enumerate}
+  \end{block}
+
+Fonte: Larson \& Farber.
+\end{frame}
+
+\begin{frame}{Exercício}
+  \centering
+  \includegraphics[width=\textwidth]{Assoc/regressao1}
+\end{frame}
+
+\begin{frame}{Exercício}
+  \centering
+  \includegraphics[width=\textwidth]{Assoc/regressao2}
+\end{frame}
+
+\begin{frame}{Exercício}
+  \begin{block}{Cola}
+        \begin{itemize}
+        \item<1->  \alert{$y = 50.72874 x + 104.06073$}
+        \item<1->  $x_1 = 1.5$
+        \item<1->  $x_2 = 1.8$
+        \item<1->  $x_3 = 2.5$
+        \end{itemize}
+  \end{block}
+  \begin{block}{Solução}
+    \begin{enumerate}
+    \item $y_1 = 50.72874 x_1 + 104.06073 = 50.72874 \times \alert{1.5} + 104.06073 = 180.1538 \approx \alert{180.2}$
+    \item $y_2 = 50.72874 x_2 + 104.06073 = 50.72874 \times \alert{1.8} + 104.06073 = 195.3725 \approx \alert{195.4}$
+    \item $y_3 = 50.72874 x_3 + 104.06073 = 50.72874 \times \alert{2.5} + 104.06073 = 230.8826 \approx \alert{230.9}$
+    \end{enumerate}
+  \end{block}
+\end{frame}
+
 \begin{frame}{Análise de Regressão}
   \begin{center}
       \includegraphics[height=0.6\textheight]{Assoc/residuos2}
