--- a/Notas_de_aula/Estatistica-Prob_Distrib_Binom.tex
+++ b/Notas_de_aula/Estatistica-Prob_Distrib_Binom.tex
@@ -250,6 +250,21 @@
 
 % \subsection{Binomial}
 \begin{frame}{A distribuição Binomial}
+  \begin{definition}
+    Um \alert{experimento binomial} é um experimento de probabilidade que possui as seguintes propriedades:
+
+    \begin{itemize}
+    \item O experimento é repetido por um $n$ fixo de tentativas independentes
+    \item Há apenas 2 resultados possíveis em cada tentativa (sucesso e fracasso)
+    \item A probabilidade de sucesso $P(S)$ é a mesma em todas as tentativas
+    \item A variável aleatória $x$ contabiliza o número de sucessos do experimento.
+    \end{itemize}
+  \end{definition}
+
+Fonte: Larson \& Farber, 2010.
+\end{frame}
+
+\begin{frame}{A distribuição Binomial}
   \begin{itemize}
   \item Quando executamos $n$ ensaios de Bernoulli
     \alert{independentes}, encontramos a distribuição Binomial
