--- a/Notas_de_aula/Estatistica-Prob_Distrib_Binom.tex
+++ b/Notas_de_aula/Estatistica-Prob_Distrib_Binom.tex
@@ -265,6 +265,17 @@ Fonte: Larson \& Farber, 2010.
 \end{frame}
 
 \begin{frame}{A distribuição Binomial}
+  \begin{block}{Notação}
+    \begin{tabular}{ll}
+      $n$& número de tentativas \\
+$p = P(S)$ & probabilidade de sucesso (por tentativa)\\
+$q = P(F)$ & probabilidade de fracasso (por tentativa)\\
+$x$ & contagem de sucessos\\
+    \end{tabular}
+  \end{block}
+\end{frame}
+
+\begin{frame}{A distribuição Binomial}
   \begin{itemize}
   \item Quando executamos $n$ ensaios de Bernoulli
     \alert{independentes}, encontramos a distribuição Binomial
