--- a/Notas_de_aula/Estatistica-Prob_Distrib_Binom.tex
+++ b/Notas_de_aula/Estatistica-Prob_Distrib_Binom.tex
@@ -275,6 +275,20 @@ $x$ & contagem de sucessos\\
   \end{block}
 \end{frame}
 
+\begin{frame}{Exercício}
+Os seguintes experimentos são binomiais ou não?
+  \begin{block}{}
+    \begin{enumerate}
+    \item Um tipo de cirurgia tem 85\% de chances de sucesso.
+      Um médico realiza o procedimento em 8 pacientes.
+      A variável aleatória representa o número de cirurgias bem sucedidas.
+    \item Uma jarra contém 5 bolinhas de gude vermelhas, 9 azuis e 6 verdes.
+      Você escolhe 3 bolinhas aleatoriamente sem reposição.
+      A variável aleatória representa o número de bolinhas vermelhas.
+    \end{enumerate}
+  \end{block}
+\end{frame}
+
 \begin{frame}{A distribuição Binomial}
   \begin{block}{Fórmula}
     \begin{displaymath}
