--- a/Notas_de_aula/Estatistica-Prob_Distrib_Binom.tex
+++ b/Notas_de_aula/Estatistica-Prob_Distrib_Binom.tex
@@ -212,14 +212,7 @@
   \end{example}
 \end{frame}
 
-% \begin{frame}{Representação gráfica}
-
-%   \begin{itemize}
-%   \item 
-%   \end{itemize}
-% \end{frame}
-
-\section{Distribuições de Probabilidade}
+\section[Distribuições Discretas]{Distribuições de Probabilidade Discretas}
 \begin{frame}{Distribuições de Probabilidade}
   \begin{definition}
     Uma \alert{distribuição de probabilidade} é um gráfico, tabela ou
@@ -234,21 +227,8 @@
   \end{itemize}
 \end{frame}
 
-\subsection{Distribuições Discretas}
+\subsection{A distribuição binomial}
 
-% \subsection{Bernoulli}
-\begin{frame}{A distribuição de Bernoulli}
-  \begin{itemize}
-  \item Um ensaio de Bernoulli é teste com desfecho 0 ou 1 (negativo
-    ou positivo)
-  \item Probabilidade de sucesso $p$
-  \item Probabilidade de fracasso $1-p$
-  \item Notação: $X \sim Bern(p)$
-  \item Valor esperado: $E[x] = p$
-  \end{itemize}
-\end{frame}
-
-% \subsection{Binomial}
 \begin{frame}{A distribuição Binomial}
   \begin{definition}
     Um \alert{experimento binomial} é um experimento de probabilidade que possui as seguintes propriedades:
