--- a/Notas_de_aula/Estatistica-Prob_Distrib_Binom.tex
+++ b/Notas_de_aula/Estatistica-Prob_Distrib_Binom.tex
@@ -269,6 +269,8 @@ Os seguintes experimentos são binomiais ou não?
   \end{block}
 \end{frame}
 
+\subsection{Probabilidades binomiais}
+
 \begin{frame}{A distribuição Binomial}
   \begin{block}{Fórmula}
     \begin{displaymath}
@@ -305,6 +307,8 @@ Os seguintes experimentos são binomiais ou não?
   \end{block}
 \end{frame}
 
+\subsection{Valor esperado}
+
 \begin{frame}{Valor esperado, variância e DP}
   \begin{itemize}
   \item Média: $\mu = np$
@@ -336,6 +340,8 @@ Os seguintes experimentos são binomiais ou não?
     Em média, há 16.8 dias nublados no mês de junho (valor esperado).
   \end{block}
 \end{frame}
+
+\subsection{Representação gráfica}
 
 \begin{frame}{Representação gráfica}
 \includegraphics[width=\textwidth]{Prob_II/binomial}
