--- a/Notas_de_aula/Estatistica-Prob_Distrib_Binom.tex
+++ b/Notas_de_aula/Estatistica-Prob_Distrib_Binom.tex
@@ -46,7 +46,7 @@
 {Distribuições de Probabilidades}
 
 \subtitle
-{Distribuições de Probabilidades Discretas} % (optional)
+{Distribuições de Probabilidades Binomiais} % (optional)
 
 \author%[] % (optional, use only with lots of authors)
 {Felipe Figueiredo}% \and S.~Another\inst{2}}
