observação para clareza
Não custa nada lembrar o que é fatorial

--- a/Notas_de_aula/Estatistica-Prob_Distrib_Binom.tex
+++ b/Notas_de_aula/Estatistica-Prob_Distrib_Binom.tex
@@ -278,6 +278,10 @@ $x$ & contagem de sucessos\\
       P(x) = \frac{n!}{(n-x)!x!}p^x q^{n-x}
     \end{displaymath}
   \end{block}
+
+  \vfill
+  \centering
+  Obs: $n!$ é o \alert{fatorial} de $n$.
 \end{frame}
 
 \begin{frame}{Exemplo}
