ênfase para clareza

--- a/Notas_de_aula/Estatistica-Prob_Distrib_Binom.tex
+++ b/Notas_de_aula/Estatistica-Prob_Distrib_Binom.tex
@@ -290,7 +290,7 @@ $x$ & contagem de sucessos\\
     A cirurgia é realizada em 3 pacientes.
 
     \bigskip
-    Qual é a probabilidade da cirurgia ser bem sucedida em exatamente 2 pacientes?
+    Qual é a probabilidade da cirurgia ser bem sucedida em {\em exatamente} 2 pacientes?
   \end{example}
 \end{frame}
 
