--- a/Listas/Estatistica-lista-Prob.tex
+++ b/Listas/Estatistica-lista-Prob.tex
@@ -83,7 +83,7 @@ Distribuições de Probabilidade
 {\url{http://sites.google.com/site/proffelipefigueiredo}\par}
 }
 
-Versão: \verb|20160504|
+Versão: \verb|20160518|
 
 %%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -124,6 +124,7 @@ Versão: \verb|20160504|
 \item Seção {\bf 5.1} (pg 200)
   \begin{itemize}
   \item 1 a 16
+  \item 21 a 40
   \end{itemize}
 \item Seção {\bf 5.2} (pg 207)
   \begin{itemize}
