--- a/Trabalhos/Estatistica-Trabalho2.tex
+++ b/Trabalhos/Estatistica-Trabalho2.tex
@@ -94,7 +94,7 @@ Nome: \underline{\hspace{6cm}} RA: \underline{\hspace{2cm}} Assinatura: \underli
 \usepackage{longtable,booktabs}
 
 \begin{document}
-\maketitle
+%\maketitle
 \newpage
 
 %%%%%%%%%%%%%%%%%%%%%%%%
@@ -156,8 +156,8 @@ O Trabalho 2 deverá ser entregue na aula e horário normais da semana indicada 
 \begin{enumerate}
 \item Identificar junto ao nome, o curso de cada aluno.
 \item Este trabalho pode ser feito a lápis, ou a caneta. Respostas finais devem estar a caneta, e destacadas. 
-\item Caso prefira, o grupo pode opcionalmente fazer o trabalho no computador e entregar impresso.
-\item O trabalho deve ser entregue com a capa providenciada. Esta folha de instruções não é necessária.
+%\item Caso prefira, o grupo pode opcionalmente fazer o trabalho no computador e entregar impresso.
+%\item O trabalho deve ser entregue com a capa providenciada. Esta folha de instruções não é necessária.
 \item A assinatura de cada integrante é {\bf obrigatória} para que este receba a nota. Sem assinatura na capa, não adianta chorar.
 \end{enumerate}
 
