--- a/Trabalhos/Estatistica-Trabalho2.tex
+++ b/Trabalhos/Estatistica-Trabalho2.tex
@@ -143,7 +143,7 @@ Versão: \verb|20160527|
 \end{itemize}
 
 \section{Valor}
-O trabalho valerá até $3.0$pts que serão somados com a nota da P2, compondo assim a nota do primeiro bimestre (B2). Todas as questões terão o mesmo valor na correção.
+O trabalho valerá até $3.0$pts que serão somados com a nota da P2, compondo assim a nota do segundo bimestre (B2). Todas as questões terão o mesmo valor na correção.
 
 \section{Entrega}
 
