--- a/Trabalhos/Estatistica-Trabalho2.Rmd
+++ b/Trabalhos/Estatistica-Trabalho2.Rmd
@@ -5,7 +5,7 @@ date: "June 1, 2016"
 output: html_document
 ---
 
-```{r, echo=FALSE}
+```{r, echo = F}
 corr  <- function (x,y) {
   n <- length(x)
   sp <- sum(x*y)
@@ -29,7 +29,7 @@ cor(x,y)
 ```
 
 ## 9.1 17 ####
-```{r}
+```{r, echo = F}
 x <- c(0,1,2,4,4,5,5,5,6,6,7,7,8)
 y <- c(40,41,51,48,64,69,73,75,68,93,84,90,95)
 corr(x,y)
@@ -38,7 +38,7 @@ cor(x,y)
 ```
 
 ## 9.1 18 ####
-```{r}
+```{r, echo = F}
 x <- c(0,1,2,3,3,5,5,5,6,7,7,10)
 y <- c(96,85,82,74,95,68,76,84,58,65,75,50)
 corr(x,y)
@@ -47,7 +47,7 @@ cor(x,y)
 ```
 
 ## 4.1 29 ####
-```{r}
+```{r, echo = F}
 x <- 0:5
 y <- c(1491,425,168,48,29,14)
 sum(x*y)/sum(x)
@@ -55,7 +55,7 @@ sum(x*y)/sum(x)
 ```
 
 ## 4.1 35 ####
-```{r}
+```{r, echo = F}
 x <- 0:8
 y <- c(0.02, 0.02,0.06,0.06,0.08,0.22,0.30,0.16,0.08)
 sum(x*y)/sum(x)
@@ -63,7 +63,7 @@ sum(x*y)/sum(x)
 ```
 
 ## 4.2 15 ####
-```{r}
+```{r, echo = F}
 n <- 5
 p <- 0.2
 n*p
@@ -71,7 +71,7 @@ n*p
 ```
 
 ## 5.1 43 ####
-```{r}
+```{r, echo = F}
 m <- 93.01
 s <- 0.005
 x <- c(93.014, 93.018, 93.004, 92.994)
@@ -80,7 +80,7 @@ x <- c(93.014, 93.018, 93.004, 92.994)
 ```
 
 ## 5.1 44 ####
-```{r}
+```{r, echo = F}
 m <- 335
 s <- 3.5
 x <- c(328, 338, 330, 341)
@@ -89,7 +89,7 @@ x <- c(328, 338, 330, 341)
 ```
 
 ## 5.2 5 ####
-```{r}
+```{r, echo = F}
 m <- 86
 s <- 5
 x <- c(70,80)
@@ -98,7 +98,7 @@ x <- c(70,80)
 ```
 
 ## 5.2 13 ####
-```{r}
+```{r, echo = F}
 m <- 69.6
 s <- 3
 x <- c(66,72)
@@ -107,7 +107,7 @@ x <- c(66,72)
 ```
 
 ## 5.2 17 ####
-```{r}
+```{r, echo = F}
 m <- 7
 s <- 1
 x <- c(5,5.5,9.5,10)
@@ -116,7 +116,7 @@ x <- c(5,5.5,9.5,10)
 ```
 
 ## 5.2 23 ####
-```{r}
+```{r, echo = F}
 m <- 186
 s <- 35.8
 x <- c(200, 240)
